# fetchai_nmims

./: package.json
client/: package-lock.json  package.json
client/src/app/: globals.css  layout.tsx
client/src/app/admin/: page.tsx
client/src/app/admin/analysis/: page.tsx
client/src/app/admin/products/: page.tsx
client/src/app/chat/: page.tsx
client/src/app/user/chat/: page.tsx
client/src/components/: Chat.tsx  ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  Navbar1.tsx  RestockModal.tsx  Sales.tsx  SellModal.tsx
server/: inventory.db  pyproject.toml  reqs.txt  requirements.txt  requirements2.txt  temp.py
server/src/: admin_assistant_client.py  cloud_vision.json  customer_assistant_client.py  main.py  temp.py  test.py  trial.py
server/src/agents/: __init__.py
server/src/agents/admin_chat_support/: admin_chat_support.py
server/src/agents/crud/: crud_agent.py
server/src/agents/customer_chat_support/: customer_chat_support.py
server/src/agents/decision_forcasting/: decision_forecasting_agent.py
server/src/agents/shop_list/: shop_list_agent.py  temp.py
server/src/messages/: __init__.py  admin_assistant.py  chat_support_message.py  crud_message.py  customer_assistant.py  customer_chat.py  inventory_assistant_message.py
