[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Siddhant Rao <siddhant.rao@spit.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
uagents = "^0.9.3"
flask = {extras = ["async"], version = "^3.0.2"}
flask-socketio = "^5.3.6"
python-socketio = {extras = ["asyncio-client"], version = "^5.11.0"}
eventlet = "^0.35.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
